[tool.poetry]
name = 'flake8-type-checking'
version = '0.1.1'
description = 'A flake8 plugin for managing type-checking imports & forward references'
homepage = 'https://github.com/sondrelg/flake8-type-checking'
repository = 'https://github.com/sondrelg/flake8-type-checking'
documentation = 'https://github.com/sondrelg/flake8-type-checking'
authors = ['Sondre Lillebø Gundersen <sondrelg@live.no>']
license = 'BSD-2-Clause'
readme = 'README.md'
keywords = ['flake8', 'linting', 'type hint', 'typing', 'imports']
include = ['CHANGELOG.md']
packages = [{ include = 'flake8_type_checking' }]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Environment :: Console',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: BSD License',
    'Topic :: Software Development :: Quality Assurance',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Typing :: Typed',
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/sondrelg/flake8-type-checking/issues"

[tool.poetry.dependencies]
python = '^3.7'
flake8 = '*'

[tool.poetry.dev-dependencies]
pytest = '^6.2.2'
ipython = '^7.20.0'
coverage = '^5.4'
pytest-cov = '^2.11.1'

[tool.poetry.plugins]
[tool.poetry.plugins.'flake8.extension']
TCH = 'flake8_type_checking:Plugin'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.coverage.run]
source = ['flake8_type_checking/*']
omit = ['flake8_type_checking/types.py']
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
    'mgr.extend_default_ignore',
    'from importlib_metadata import version',
    'except possible_local_errors:',
]

[tool.black]
line-length = 120
include = '\.pyi?$'
skip-string-normalization = true

[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
line_length = 120
known_third_party = ['flake8']
known_first_party = ['flake8_typing_imports']

[tool.pytest.ini_options]
addopts = ['--cov=flake8_type_checking','--cov-report', 'term-missing']
