[tool.poetry]
name = 'flake8-type-checking'
version = "1.3.3"
description = 'A flake8 plugin for managing type-checking imports & forward references'
homepage = 'https://github.com/snok'
repository = 'https://github.com/sondrelg/flake8-type-checking'
authors = ['Sondre Lillebø Gundersen <sondrelg@live.no>']
license = 'BSD-3-Clause'
readme = 'README.md'
keywords = ['flake8', 'plugin', 'linting', 'type hint', 'typing', 'imports']
include = ['CHANGELOG.md']
packages = [{ include = 'flake8_type_checking' }]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Environment :: Console',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: BSD License',
    'Topic :: Software Development :: Quality Assurance',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Typing :: Typed',
]

[tool.poetry.urls]
"Releases" = "https://github.com/snok/flake8-type-checking/releases"

[tool.poetry.dependencies]
python = '^3.8'
flake8 = '*'

[tool.poetry.dev-dependencies]
pytest = '^6.2.2'
ipython = '^7.20.0'
coverage = '^5.4'
pre-commit = "^2.11.1"
pytest-flake8dir = "^2.3.1"

[tool.poetry.plugins]
[tool.poetry.plugins.'flake8.extension']
TC = 'flake8_type_checking.plugin:Plugin'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.black]
quiet = true
line-length = 120
skip-string-normalization = true
experimental-string-processing = true

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
source = ['flake8_type_checking']
omit = ['flake8_type_checking/types.py']
branch = false

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    'if TYPE_CHECKING:',
    'mgr.extend_default_ignore',
    'from importlib_metadata import version',
    'except possible_local_errors:',
]
